--- a/apps/cronometraggio-sportivo/package.json
+++ b/apps/cronometraggio-sportivo/package.json
@@ -7,7 +7,27 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "init-db": "node scripts/init-database.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "lint:check": "eslint . --ext .js --max-warnings 0",
+    "build": "echo 'Build step - add your build logic here'",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:clean": "docker-compose down -v --remove-orphans && docker system prune -f",
+    "backup": "./scripts/backup.sh",
+    "restore": "./scripts/restore.sh",
+    "deploy": "./scripts/deploy.sh",
+    "update": "./scripts/update.sh",
+    "setup": "npm install && npm run init-db",
+    "health": "curl -f http://localhost:3002/api/health || echo 'Service not available'",
+    "logs": "tail -f logs/*.log 2>/dev/null || echo 'No log files found'",
+    "clean": "rm -rf node_modules coverage .jest-cache && npm install"
   },
   "keywords": ["cronometraggio", "sportivo", "mobile", "webapp"],
   "author": "Your Name",
